# ezsockets

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
benches/: ezsockets_server.rs  my_benchmark.rs  tungstenite_server.rs
examples/: client.rs  server-axum.rs  server-tungstenite.rs  server.rs
examples/chat-client/: Cargo.toml
examples/chat-client-wasm/: Cargo.toml  README.md
examples/chat-client-wasm/src/: main.rs
examples/chat-client/src/: main.rs
examples/chat-server/: Cargo.toml
examples/chat-server-actix-web/: Cargo.toml
examples/chat-server-actix-web/src/: main.rs
examples/chat-server-axum/: Cargo.toml
examples/chat-server-axum/src/: main.rs
examples/chat-server-graceful-shutdown/: Cargo.toml
examples/chat-server-graceful-shutdown/src/: main.rs
examples/chat-server-warp/: Cargo.toml
examples/chat-server-warp/src/: main.rs
examples/chat-server/src/: main.rs
examples/counter-server/: Cargo.toml
examples/counter-server/src/: main.rs
examples/echo-server/: Cargo.toml
examples/echo-server-custom-config/: Cargo.toml
examples/echo-server-custom-config/src/: main.rs
examples/echo-server-graceful-shutdown/: Cargo.toml
examples/echo-server-graceful-shutdown/src/: main.rs
examples/echo-server-native-tls/: Cargo.toml
examples/echo-server-native-tls/src/: main.rs
examples/echo-server/src/: main.rs
examples/json-client/: Cargo.toml
examples/json-client/src/: main.rs
examples/json-server/: Cargo.toml
examples/json-server/src/: main.rs
examples/simple-client/: Cargo.toml
examples/simple-client/src/: main.rs
src/: actix_web.rs  axum.rs  client.rs  lib.rs  server.rs  session.rs  socket.rs  tungstenite.rs  tungstenite_common.rs  warp.rs  websocket.rs
src/client_connectors/: client_connector_tokio.rs  client_connector_wasm.rs  mod.rs
src/server_runners/: axum.rs  axum_tungstenite.rs  mod.rs  tungstenite.rs  tungstenite_common.rs
tests/: axum.rs  chat.rs  client.rs  graceful_shutdown.rs  tungstenite.rs
