[package]
name = "ezsockets"
version = "0.5.1"
edition = "2021"
authors = ["Grzegorz Barański <me@gbaranski.com>"]
description = "WebSockets server & client made easy"
readme = "README.md"
repository = "https://github.com/gbaranski/ezsockets"
license = "MIT"
keywords = ["websocket", "networking", "async"]
categories = ["asynchronous", "network-programming", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
base64 = "0.21.0"
futures = "0.3.21"
http = "0.2.6"
tokio = { version = "1.17.0", features = ["sync", "rt", "macros", "time"] }
tracing = "0.1.31"
url = "2.2.2"
cfg-if = "1.0.0"

axum_crate = { package = "axum", version = "0.6.1", features = ["ws"], optional = true }
tokio-tungstenite = { version = "0.18.0", optional = true }
tokio-rustls = { version = "0.23.4", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }

[features]
default = ["client", "server"]

client = ["tokio-tungstenite"]

server = []
tungstenite = ["server", "tokio-tungstenite"]
axum = ["server", "axum_crate"]

tls = []
native-tls = ["tls", "tokio-native-tls", "tokio-tungstenite/native-tls"]
rustls = ["tls", "tokio-rustls", "tokio-tungstenite/rustls-tls-webpki-roots"]

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = "0.3.9"
criterion = "0.4"
rand = "0.8.5"

[package.metadata.docs.rs]
# document all features
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "examples/chat-client",
    "examples/chat-server",
    "examples/chat-server",
    "examples/chat-server-axum",
    "examples/echo-server",
    "examples/echo-server-custom-config",
    "examples/echo-server-native-tls",
    "examples/simple-client",
    "examples/counter-server"
]

[[test]]
name = "axum"
required-features = ["axum"]

[[test]]
name = "tungstenite"
required-features = ["tungstenite"]


[[bench]]
name = "my_benchmark"
harness = false
