[package]
name = "ezsockets"
version = "0.5.1"
edition = "2021"
authors = ["Grzegorz Barański <me@gbaranski.com>"]
description = "WebSockets server & client made easy"
readme = "README.md"
repository = "https://github.com/gbaranski/ezsockets"
license = "MIT"
keywords = ["websocket", "networking", "async"]
categories = ["asynchronous", "network-programming", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
atomic_enum = "0.2.0"
base64 = "0.21.0"
enfync = "0.1.0"
futures = "0.3.21"
http = "0.2.8"
tokio = { version = "1.17.0", features = ["sync", "macros", "time"] }
tracing = "0.1.31"
tungstenite = "0.20.0"
url = "2.2.2"
cfg-if = "1.0.0"

axum = { version = "0.6.1", optional = true }
axum-core = { version = "0.3.0", optional = true }
bytes = { version = "1.3.0", optional = true }
futures-util = { version = "0.3.25", default-features = false, features = ["alloc"], optional = true }
http-body = { version = "0.4.5", optional = true }
hyper = { version = "0.14.23", optional = true }
sha-1 = { version = "0.10.1", optional = true }
tokio-tungstenite = { version = "0.20.0", optional = true }

tokio-tungstenite-wasm = { version = "0.2.0", optional = true }

tokio-rustls = { version = "0.24.1", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }

[features]
default = ["native_client", "server"]

client = ["tokio-tungstenite-wasm"]
native_client = ["client", "tokio/rt"]
wasm_client = ["client"]

server = ["tokio-tungstenite", "tokio-tungstenite-wasm", "tokio/rt"]
tungstenite = ["server"]
axum = ["server", "dep:axum", "axum-core", "bytes", "futures-util", "http-body", "hyper", "sha-1"]

tls = []
native-tls = ["tls", "tokio-native-tls", "tokio-tungstenite/native-tls"]
rustls = ["tls", "tokio-rustls", "tokio-tungstenite/rustls-tls-webpki-roots"]

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = "0.3.9"
criterion = "0.4"
rand = "0.8.5"

[package.metadata.docs.rs]
# document all features
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "examples/chat-client",
    "examples/chat-server",
    "examples/chat-server-axum",
    "examples/echo-server",
    "examples/echo-server-native-tls",
    "examples/simple-client",
    "examples/counter-server"
]

[[test]]
name = "axum"
required-features = ["axum"]

[[test]]
name = "tungstenite"
required-features = ["tungstenite"]


[[bench]]
name = "my_benchmark"
harness = false
