[package]
name = "ezsocket-echo-server-native-tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
ezsockets = { path = "../../", features = ["tungstenite", "native-tls"] }
native-tls = "0.2.11"
tokio = { version = "1.17.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
